<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog"
            android:orientation="horizontal"
            android:weightSum="10">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:textSize="20sp"
                android:text="@string/notification"
                android:fontFamily="@font/nunito_extrabold"
                android:gravity="center"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:textAlignment="center"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/message_delete"
                android:fontFamily="@font/nunito_extrabold"
                android:textSize="16sp"
                android:textAlignment="center"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2" >


                <Button
                    android:id="@+id/btn_no_dialog"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:text="@string/no"
                    android:textAllCaps="false"
                    android:fontFamily="@font/nunito_extrabold"
                    android:background="@drawable/bg_btn_negative"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/btn_yes_dialog"
                    android:text="@string/yes"
                    android:textAllCaps="false"
                    android:fontFamily="@font/nunito_extrabold"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:background="@drawable/bg_btn_positive"
                    style="?android:attr/buttonBarButtonStyle" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>